--- a/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
+++ b/PS4-CHEME-5660-Student-SIM-MinVar-RA-Fall-2025.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## PS4: Single Index Models and Minimum Variance Portfolio Allocation\n",
-    "In this problem set, we will use single index models to construct a minimum variance portfolio from a set of risky assets. We will then compare the performance of portfolios constructed using only primary tickers versus those that include low-correlation twin assets. What we will learning about including low-correlation assets in a portfolio optimization context?\n",
+    "In this  set, we will use single index models to construct a minimum variance portfolio from a set of risky assets. We will then compare the performance of portfolios constructed using only primary tickers versus those that include low-correlation twin assets. What we will learning about including low-correlation assets in a portfolio optimization context?\n",
     "\n",
     "> __Learning Objectives:__\n",
     "> \n",
